# ComfyUI-EasyOCR

./: README.md  __init__.py  node.py  pyproject.toml  requirements.txt
readme/: README.zh_CN.md
web/js/: model.core.js
