[project]
name = "comfyui-easyocr"
description = "This node is primarily based on Easy-OCR to implement OCR text recognition functionality."
version = "1.0.1"
license = "LICENSE"
dependencies = ["easyocr"]

[project.urls]
Repository = "https://github.com/prodogape/ComfyUI-EasyOCR"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "prodogape"
DisplayName = "ComfyUI-EasyOCR"
Icon = "https://avatars.githubusercontent.com/u/89724016?s=400&u=cd218743591faf329d4b4f07a14de1130a9f56cc&v=4"
